syntax = "proto3";
package blog;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = ".;blog";

service BlogService {
	rpc ReadBlogByID(ReadBlogByIDRequest) returns (Blog) {
		option (google.api.http) = {
			get: "/v1/blog"
		};
	}

	rpc CreateBlog(CreateBlogRequest) returns (Blog) {
		option (google.api.http) = {
			post: "/v1/blog",
			body: "data"
		};
	}

	rpc UpdateBlog(UpdateBlogRequest) returns (Blog) {
		option (google.api.http) = {
			put: "/v1/blog",
			body: "data"
		};
	}

	rpc DeleteBlog(DeleteBlogRequest) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			delete: "/v1/blog"
		};
	}

	rpc ReadBlogList(ReadBlogListRequest) returns (ReadBlogListResponse) {
		option (google.api.http) = {
			get: "/v1/blogs"
		};
	}
}

message Blog {
	int64 id = 1;
	string slug = 2;
	string title = 3;
	string content = 4;
	string author = 5;
	int64 createdAt = 6 [json_name = "created_at"];
	int64 updatedAt = 7 [json_name = "updated_at"];
}

message ReadBlogByIDRequest {
	int64 id = 1;
	string slug = 2;
}

message CreateBlogRequest {
	CreateBlogRequestData data = 1;
}

message CreateBlogRequestData {
	int64 id = 1;
	string title = 2;
	string content = 3;
	string author = 4;
}

message UpdateBlogRequest {
	int64 id = 1;
	string slug = 2;
	UpdateBlogRequestData data = 3;
}

message UpdateBlogRequestData {
	int64 id = 1;
	string title = 2;
	string content = 3;
	string author = 4;
}

message DeleteBlogRequest {
	int64 id = 1;
	string slug = 2;
}

message ReadBlogListRequest {}

message ReadBlogListResponse {
	repeated Blog blogs = 1;
}
